--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,12 +2,12 @@
 #
 # The following variables needs to be defined before running the deployment jobs 
 # defined in this pipeline:
-# - STAGING_DEPLOY_TYPE: 'deployToProductionSlot' || 'deployToStagingSlotAndSwap'
+# - STAGING_DEPLOY_TYPE: 'deploy_standard' || 'deploy_to_slots'
 # - STAGING_AZURE_SUBSCRIPTION
 # - STAGING_RESOURCE_GROUP_NAME
 # - STAGING_FUNCTION_APP_NAME
 # 
-# - PRODUCTION_DEPLOY_TYPE: 'deployToProductionSlot' || 'deployToStagingSlotAndSwap'
+# - PRODUCTION_DEPLOY_TYPE: 'deploy_standard' || 'deploy_to_slots'
 # - PRODUCTION_AZURE_SUBSCRIPTION
 # - PRODUCTION_RESOURCE_GROUP_NAME
 # - PRODUCTION_FUNCTION_APP_NAME
@@ -118,7 +118,7 @@ stages:
   # C) Deploy to STAGE environment only if there is a push on 'master' branch.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $STAGING_DEPLOY_TYPE != deploy_to_slots (or undef): deploy to 'prodution' slot
+  #   - c1) $STAGING_DEPLOY_TYPE == deploy_standard: deploy to 'prodution' slot
   #   - c2) $STAGING_DEPLOY_TYPE == deploy_to_slots: deploy to 'staging' slot in PROD and 
   #         then swap 'staging' slot with 'production' slot
   - stage: Deploy_staging
@@ -138,7 +138,7 @@ stages:
     jobs:
       # Option 1: deploy directly to 'production' slot
       - job: deploy_standard
-        condition: and(succeeded(), ne(variables['STAGING_DEPLOY_TYPE'], 'deploy_to_slots'))
+        condition: and(succeeded(), eq(variables['STAGING_DEPLOY_TYPE'], 'deploy_standard'))
         steps:
         - template: azure-templates/deploy-steps.yml
           parameters:
@@ -159,10 +159,10 @@ stages:
             appName: '$(STAGING_FUNCTION_APP_NAME)'
 
 
-  # D) Deploy to PRODUCTION only if the 'latest' tag is pushed.
+  # D) Deploy to PRODUCTION environment only if the 'latest' tag is pushed.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $PRODUCTION_DEPLOY_TYPE != deploy_to_slots (or undef): deploy to 'prodution' slot
+  #   - c1) $PRODUCTION_DEPLOY_TYPE == deploy_standard: deploy to 'prodution' slot
   #   - c2) $PRODUCTION_DEPLOY_TYPE == deploy_to_slots: deploy to 'staging' slot in PROD and 
   #         then swap 'staging' slot with 'production' slot
   - stage: Deploy_production
@@ -183,7 +183,7 @@ stages:
     jobs:
       # Option 1: deploy directly to 'production' slot
       - job: deploy_standard
-        condition: and(succeeded(), ne(variables['PRODUCTION_DEPLOY_TYPE'], 'deploy_to_slots'))
+        condition: and(succeeded(), eq(variables['PRODUCTION_DEPLOY_TYPE'], 'deploy_standard'))
         steps:
         - template: azure-templates/deploy-steps.yml
           parameters:
