--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -132,31 +132,16 @@ stages:
           )
         )
       )
-    dependsOn: []
-    #- Build
-    #- Test
+    dependsOn:
+    - Build
+    - Test
     jobs:
-      # Option 1: deploy directly to 'production' slot
-      - job: deploy_standard
-        condition: and(succeeded(), eq(variables['STAGING_DEPLOY_TYPE'], 'deploy_standard'))
-        steps:
-        - template: azure-templates/deploy-steps.yml
-          parameters:
-            deployType: 'deployToProductionSlot'
-            azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
-            resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
-            appName: '$(STAGING_FUNCTION_APP_NAME)'
-
-      # Option 2: deploy to staging slot and then swap with 'production' slot
-      - job: deploy_to_slots
-        condition: and(succeeded(), eq(variables['STAGING_DEPLOY_TYPE'], 'deploy_to_slots'))
-        steps:
-        - template: azure-templates/deploy-steps.yml
-          parameters:
-            deployType: 'deployToStagingSlotAndSwap'
-            azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
-            resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
-            appName: '$(STAGING_FUNCTION_APP_NAME)'
+    - template: azure-templates/deploy-jobs.yml
+      parameters:
+        deployMode: '$(STAGING_DEPLOY_TYPE)'
+        azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
+        resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
+        appName: '$(STAGING_FUNCTION_APP_NAME)'
 
 
   # D) Deploy to PRODUCTION environment only if the 'latest' tag is pushed.
