--- a/azure-templates/deploy-jobs.yml
+++ b/azure-templates/deploy-jobs.yml
@@ -21,22 +21,20 @@ parameters:
 jobs:
   # Option 1: deploy directly to 'production' slot
   - job: deploy_standard
-    condition: and(succeeded(), eq(parameters.deployMode, 'deploy_standard'))
     steps:
     - template: ./deploy-steps.yml
       parameters:
-        deployType: 'deployToProductionSlot'
+        deployType: '${{ parameters.deployMode }}'
         azureSubscription: '${{ parameters.azureSubscription }}'
         resourceGroupName: '${{ parameters.resourceGroupName }}'
         appName: '${{ parameters.appName }}'
 
   # Option 2: deploy to staging slot and then swap with 'production' slot
   - job: deploy_to_slots
-    condition: and(succeeded(), eq(parameters.deployMode, 'deploy_to_slots'))
     steps:
     - template: ./deploy-steps.yml
       parameters:
-        deployType: 'deployToStagingSlotAndSwap'
+        deployType: '${{ parameters.deployMode }}'
         azureSubscription: '${{ parameters.azureSubscription }}'
         resourceGroupName: '${{ parameters.resourceGroupName }}'
         appName: '${{ parameters.appName }}'
