--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,12 +2,12 @@
 #
 # The following variables needs to be defined before running the deployment jobs 
 # defined in this pipeline:
-# - STAGING_DEPLOY_TYPE: 'deploy_standard' || 'deploy_to_slots'
+# - STAGING_DEPLOY_MODE: 'deploy_standard' || 'deploy_to_slots'
 # - STAGING_AZURE_SUBSCRIPTION
 # - STAGING_RESOURCE_GROUP_NAME
 # - STAGING_FUNCTION_APP_NAME
 # 
-# - PRODUCTION_DEPLOY_TYPE: 'deploy_standard' || 'deploy_to_slots'
+# - PRODUCTION_DEPLOY_MODE: 'deploy_standard' || 'deploy_to_slots'
 # - PRODUCTION_AZURE_SUBSCRIPTION
 # - PRODUCTION_RESOURCE_GROUP_NAME
 # - PRODUCTION_FUNCTION_APP_NAME
@@ -118,8 +118,8 @@ stages:
   # C) Deploy to STAGE environment only if there is a push on 'master' branch.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $STAGING_DEPLOY_TYPE == deploy_standard: deploy to 'prodution' slot
-  #   - c2) $STAGING_DEPLOY_TYPE == deploy_to_slots: deploy to 'staging' slot in PROD and 
+  #   - c1) $STAGING_DEPLOY_MODE == deploy_standard: deploy to 'prodution' slot
+  #   - c2) $STAGING_DEPLOY_MODE == deploy_to_slots: deploy to 'staging' slot in PROD and 
   #         then swap 'staging' slot with 'production' slot
   - stage: Deploy_staging
     condition: and(
@@ -136,19 +136,34 @@ stages:
     - Build
     - Test
     jobs:
-    - template: azure-templates/deploy-jobs.yml
-      parameters:
-        deployMode: '$(STAGING_DEPLOY_TYPE)'
-        azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
-        resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
-        appName: '$(STAGING_FUNCTION_APP_NAME)'
+      # Option 1: deploy directly to 'production' slot
+      - job: deploy_standard
+        condition: and(succeeded(), eq(variables['STAGING_DEPLOY_MODE'], 'deploy_standard'))
+        steps:
+        - template: azure-templates/deploy-steps.yml
+          parameters:
+            deployType: 'deployToProductionSlot'
+            azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
+            resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
+            appName: '$(STAGING_FUNCTION_APP_NAME)'
+
+      # Option 2: deploy to staging slot and then swap with 'production' slot
+      - job: deploy_to_slots
+        condition: and(succeeded(), eq(variables['STAGING_DEPLOY_MODE'], 'deploy_to_slots'))
+        steps:
+        - template: azure-templates/deploy-steps.yml
+          parameters:
+            deployType: 'deployToStagingSlotAndSwap'
+            azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
+            resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
+            appName: '$(STAGING_FUNCTION_APP_NAME)'
 
 
   # D) Deploy to PRODUCTION environment only if the 'latest' tag is pushed.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $PRODUCTION_DEPLOY_TYPE == deploy_standard: deploy to 'prodution' slot
-  #   - c2) $PRODUCTION_DEPLOY_TYPE == deploy_to_slots: deploy to 'staging' slot in PROD and 
+  #   - c1) $PRODUCTION_DEPLOY_MODE == deploy_standard: deploy to 'prodution' slot
+  #   - c2) $PRODUCTION_DEPLOY_MODE == deploy_to_slots: deploy to 'staging' slot in PROD and 
   #         then swap 'staging' slot with 'production' slot
   - stage: Deploy_production
     condition: and(
@@ -168,7 +183,7 @@ stages:
     jobs:
       # Option 1: deploy directly to 'production' slot
       - job: deploy_standard
-        condition: and(succeeded(), eq(variables['PRODUCTION_DEPLOY_TYPE'], 'deploy_standard'))
+        condition: and(succeeded(), eq(variables['PRODUCTION_DEPLOY_MODE'], 'deploy_standard'))
         steps:
         - template: azure-templates/deploy-steps.yml
           parameters:
@@ -179,7 +194,7 @@ stages:
 
       # Option 2: deploy to staging slot and then swap with 'production' slot
       - job: deploy_to_slots
-        condition: and(succeeded(), eq(variables['PRODUCTION_DEPLOY_TYPE'], 'deploy_to_slots'))
+        condition: and(succeeded(), eq(variables['PRODUCTION_DEPLOY_MODE'], 'deploy_to_slots'))
         steps:
         - template: azure-templates/deploy-steps.yml
           parameters:
