--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,12 @@ variables:
   NODE_VERSION: '10.14.1'
   YARN_CACHE_FOLDER: $(Pipeline.Workspace)/.yarn
 
-
+resources:
+  repositories:
+  - repository: 'myrepo'
+    type: 'github'
+    name: 'rcastino/mygitdevops'
+    endpoint: 'GitHub_public_repo_connection'
 
 # This pipeline can be manually run or is automatically triggered whenever one 
 # of the following conditions is true:
@@ -58,16 +63,10 @@ stages:
       # A1) Checkout, install module and build code
       - job: make_build      
         steps:
-        - task: DownloadGitHubRelease@0
-          inputs:
-            connection: 'GitHub_public_repo_connection'
-            userRepository: 'rcastino/mygitdevops'
-            defaultVersionType: 'latest'
-            itemPattern: 'azure-templates/**'
-            downloadPath: '$(System.ArtifactsDirectory)/azure-templates'
+
 
         # ORIG OK: template: azure-templates/make-build-steps.yml
-        - template: $(System.ArtifactsDirectory)/azure-templates/mytemplate.yml
+        - template: azure-templates/mytemplate.yml@myrepo
           parameters:
             make: build
             
